# JaniceDiff

./: CMakeLists.txt  README.md
docs/: init.md  milestone_0.md  milestone_0_prompts.md  milestone_1.md  milestone_2.md  milestone_3.md  milestone_4.md  milestone_5.md  milestone_6.md  milestone_7.md  milestone_prompts.md  milestones.md  spec_v1_frozen.md  todo
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/app/widgets/: DiffTextView.cpp  DiffTextView.h
src/common/: CMakeLists.txt  invocation.cpp  invocation.h  logging.cpp  logging.h  startup_policy.cpp  startup_policy.h
src/core/: CMakeLists.txt  content_sources.cpp  content_sources.h  dir_diff.cpp  dir_diff.h  dir_diff_model.h  dir_walk.cpp  dir_walk.h  file_compare.cpp  file_compare.h  file_list_rows.cpp  file_list_rows.h  loaded_text_file.cpp  loaded_text_file.h  model.cpp  model.h  porcelain.cpp  porcelain.h  process.cpp  process.h  render_model.cpp  render_model.h  repo_discovery.cpp  repo_discovery.h  repo_status.cpp  repo_status.h
src/core/diff/: alignment.cpp  alignment.h  diff.cpp  diff.h  diff_stats.cpp  diff_stats.h  whitespace.cpp  whitespace.h
src/core/navigation/: change_navigation.cpp  change_navigation.h
src/core/render/: diff_render_model.cpp  diff_render_model.h
tests/: CMakeLists.txt  test_change_navigation.cpp  test_content_sources.cpp  test_core_model.cpp  test_diff_api.cpp  test_diff_classification.cpp  test_diff_golden_fixtures.cpp  test_diff_hunks.cpp  test_diff_myers.cpp  test_diff_performance_sanity.cpp  test_diff_render_model.cpp  test_diff_stats.cpp  test_diff_whitespace.cpp  test_dir_diff.cpp  test_dir_diff_model.cpp  test_dir_walk.cpp  test_file_compare.cpp  test_file_list_rows.cpp  test_invocation.cpp  test_loaded_text_file.cpp  test_porcelain.cpp  test_process.cpp  test_render_model.cpp  test_repo_discovery.cpp  test_repo_status.cpp  test_smoke.cpp
tests/fixtures/diff/: README.md
tests/fixtures/diff/empty_vs_nonempty/: expected_exact.txt  expected_ignore_all.txt  expected_ignore_trailing.txt
tests/fixtures/diff/insert_with_repeats/: expected_exact.txt  expected_ignore_all.txt  expected_ignore_trailing.txt  left.txt  right.txt
tests/fixtures/diff/replace_middle/: expected_exact.txt  expected_ignore_all.txt  expected_ignore_trailing.txt
tests/fixtures/diff/whitespace_equivalence/: expected_exact.txt  expected_ignore_all.txt  expected_ignore_trailing.txt  left.txt  right.txt
tests/fixtures/dir_diff/left/: different.txt  left_only.txt
tests/fixtures/dir_diff/right/: different.txt  right_only.txt
tests/fixtures/dir_diff/right/nested/: n1.txt
